Fixed alignment in css

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -161,7 +161,7 @@
     margin: 0 auto;
     justify-content: center;
     gap: 15px;
-    margin-left: -56px;
+    margin-left: -50px;
   }
 
   .image-container img {
